--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
     display: block;
     width: 4px;
     height: 100%;
-    background-color: blue;
+    background-color: #4318FF;
     position: absolute;
     right: 0;
     top: 0;
     border-radius: 5px;
-    color: blue;
+    color: #4318FF;
 }
 
 .link-side-bar {
