--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 .link-side-bar {
-    @apply flex items-center px-3 py-2 text-gray-400 transition-colors duration-300 transform rounded-lg dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-gray-700;
+    @apply flex items-center px-3 py-2 text-gray-400 transition-colors duration-300 transform rounded-lg hover:bg-gray-100 hover:text-gray-700;
 }
 
 
